final footer changes

--- a/Project/index.html
+++ b/Project/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./headerstyle.css">
     <link rel="stylesheet" href="./herosec.css">
     <link rel="stylesheet" href="./shop.css">
+    <link rel="stylesheet" href="./footer.css">
 </head>
 <body>
     
@@ -136,8 +137,90 @@
             <p>See more</p>
         </div>
         </div>
-
     </div>
+
+<footer>
+    <div class="foot-panel1">Back to Top</div>
+    <div class="foot-panel-main">
+        <ul>
+<p>Get to Know Us</p>
+<a>Careers</a>
+<a>Blog</a>
+<a>About Amazon</a>
+<a>Investor Relations</a>
+<a>Amazon Devices</a>
+<a>Amazon Science</a>
+        </ul>
+        <ul>
+	
+            <p>Make Money with Us</p>
+            <a>Sell products on Amazon</a>
+           <a> Sell on Amazon Business</a>
+           <a> Sell apps on Amazon</a>
+           <a> Become an Affiliate</a>
+           <a> Advertise Your Products</a>
+            <a>Self-Publish with Us</a>
+           <a> Host an Amazon Hub</a>
+           <a> See More Make Money with Us</a>
+
+        </ul>
+        <ul>
+	
+            <p>Make Money with Us</p>
+            <a>Sell products on Amazon</a>
+           <a> Sell on Amazon Business</a>
+           <a> Sell apps on Amazon</a>
+           <a> Become an Affiliate</a>
+           <a> Advertise Your Products</a>
+            <a>Self-Publish with Us</a>
+           <a> Host an Amazon Hub</a>
+           <a> See More Make Money with Us</a>
+
+        </ul>
+        <ul>
+	
+            <p>Make Money with Us</p>
+            <a>Sell products on Amazon</a>
+           <a> Sell on Amazon Business</a>
+           <a> Sell apps on Amazon</a>
+           <a> Become an Affiliate</a>
+           <a> Advertise Your Products</a>
+            <a>Self-Publish with Us</a>
+           <a> Host an Amazon Hub</a>
+           <a> See More Make Money with Us</a>
+
+        </ul>
+    </div>
+    <div class="foot-panel3">
+        <div class="logo-panel"></div>
+        <div class="box101">
+            <i class="fa-solid fa-globe"></i>
+            &nbsp;&nbsp; English &nbsp;
+            <i class="fa-solid fa-arrows-up-down"></i>
+        </div>
+        <div class="box101">
+            <i class="fa-solid fa-dollar-sign"></i>&nbsp
+            USD - U.S. Dollar
+        </div>
+        <div class="box101">
+            <div class="flag-logo"></div>
+               <span>&nbsp;India </span>  
+        </div>
+    </div>
+
+    <div class="foot-panel4">
+        <ul>
+            <a href="#">Conditions of Use</a>
+            <a href="#">Privacy Notice</a>
+            <a href="#">Consumer Health Data Privacy Disclosure</a>
+            <a href="#"> Your Ads Privacy Choices</a>
+        </ul>
+        <div class="halmark">
+            &#169 1996-2025, Amazon.com, Inc. or its affiliates
+        </div>
+    </div>
+
+</footer>
 
 </body>
 </html>
